[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballsdex-battle"
version = "1.0.0"
description = "Battle package for BallsDex V3"
license = "MIT"
authors = [
  { name = "hiboman" },
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[project.urls]
Repository = "https://github.com/hiboman/BallsDex-Battle-Pack"
Documentation = "https://github.com/hiboman/BallsDex-Battle-Pack#readme"
Issues = "https://github.com/hiboman/BallsDex-Battle-Pack/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["battle*"]
